[package]
name = "goldmarket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
tui = "0.19.0"
crossterm = "0.29.0"
tokio = {version = "1.48.0", features = ["full"]}
tokio-macros = { version = "2.6.0" }
deepseek-api = {version = "0.1.1", default-features = false, features = ["is_async"]}
anyhow = "1.0.100"
schemars = "0.8.22"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.107"
